syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.github.riwcwt.grpc.zookeeper.api";
option java_outer_classname = "Grpc";

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }

    // chat
    rpc Chat (stream ChatMessage) returns (stream ChatMessage) {
    }
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}

// The response message containing the greetings
message ChatMessage {
    string message = 1;
}